# curalive-platform

./: .build-marker  .deployment-marker  .env.codespace  .env.example  .env.production.template  .eslintignore  .gitattributes  .gitignore  .replit  AGENTS.md  AI_ARCHITECTURE_ROADMAP.md  AI_TRANSCRIPTION_SUMMARIZATION_SPEC.md  ALL_WORKFLOWS_TESTING_COMPLETE.md  AUTONOMOUS_EXECUTION_PLAN.md  BIDIRECTIONAL_SYNC_WORKFLOW.md  BILLING_ROADMAP.md  CHATGPT_BRIEF_CURALIVE.md  CHATGPT_GITHUB_SYNC.md  CHATGPT_PUSH_SETUP.md  CHATGPT_QUICK_START.md  CHATGPT_SYNC_BRIEF.md  CHATGPT_UPDATE_BRIEF.docx  CHATGPT_UPDATE_BRIEF.md  CLAUDE_BRIEF.md  CODESPACE-SETUP.md  CODE_TRUTH_AUDIT_c9dd191.md  CODE_TRUTH_REVIEW_REPORT.md  COLLABORATION.md  COMPLETE_WORKFLOW_TESTING.md  COMPREHENSIVE_VALIDATION_REPORT_FINAL.md  CRITICAL_PRODUCTION_READINESS.md  CURALIVE-STATUS-BRIEF.md  CURALIVE_BRIEF.md  CURALIVE_BUSINESS_BRIEF.md  CURALIVE_COMPLETION_REPORT.md  CURALIVE_NERVOUS_SYSTEM_SPEC.md  CURALIVE_RENDER_DEPLOYMENT_BRIEF.md  CURALIVE_TECH_STACK_BRIEF.md  CURALIVE_WORKING_DOCUMENT.md  CUSTOMER_DEPLOYMENT_GUIDE.md  (+155 more)
curalive_ai_core/: .env.example  README.md  README_FIRST_MODULE.md  pyproject.toml  requirements.txt
curalive_ai_core/app/: main.py
curalive_ai_core/app/api/: router.py
curalive_ai_core/app/core/: config.py
curalive_ai_core/app/models/: analysis_job.py  analysis_result.py  benchmark.py  briefing.py  commitment.py  compliance_flag.py  drift_event.py  event.py  governance_record.py  org_profile.py  (+1 more)
curalive_ai_core/docs/: integration_contract.md
curalive_ai_core/tests/: test_health.py
(+2410 files in other folders)
