[project]
name = "curalive-ai-core"
version = "0.1.0"
description = "CuraLive AI Core backend skeleton"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "alembic>=1.13.2",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "tenacity>=8.5.0",
  "pgvector>=0.3.4",
  "structlog>=24.4.0",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.2",
  "ruff>=0.6.2",
  "mypy>=1.11.1",
]
